--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,11 @@
+dependencies:
+  override:
+    - eval "$(curl -sL https://apt.vapor.sh)"
+    - sudo apt-get install vapor
+    - sudo chmod -R a+rx /usr/
+
 test:
   override:
     - "mongo --eval \"db.createUser({user: 'test', pwd: 'test', roles: []})\""    
-    - eval "$(curl -sL swift.vapor.sh/ci)"
+    - swift build -c release
+    - swift test
