--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
 dependencies:
   cache_directories:
-    - ../mongodb-linux-x86_64-ubuntu1204-3.2.13
+    - ../mongodb-linux-x86_64-ubuntu1204-3.4.4
   pre:
-    - if [[ ! -d ../mongodb-linux-x86_64-ubuntu1204-3.2.13 ]]; then wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1204-3.2.13.tgz -P ../ && tar xvzf ../mongodb-linux-x86_64-ubuntu1204-3.2.13.tgz -C ../; fi
+    - if [[ ! -d ../mongodb-linux-x86_64-ubuntu1204-3.4.4 ]]; then wget https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1204-3.4.4.tgz -P ../ && tar xvzf ../mongodb-linux-x86_64-ubuntu1204-3.4.4.tgz -C ../; fi
     - sudo service mongod stop
-    - sudo cp ../mongodb-linux-x86_64-ubuntu1204-3.2.13/bin/* /usr/bin
+    - sudo cp ../mongodb-linux-x86_64-ubuntu1204-3.4.4/bin/* /usr/bin
     - sudo service mongod start
   override:
     - eval "$(curl -sL https://apt.vapor.sh)"
